# rules_tap

./: .bazelrc  .gitignore  CHANGELOG.md  MODULE.bazel  README.md  cli.bzl
.github/workflows/: ci.yml
bazel/: BUILD.bazel  aspects.bzl  defs.bzl  rules.bzl
ci/: BUILD.bazel  defs.bzl
cli/: BUILD.bazel
