load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

# The public Starlark surface consumers load as `@rules_tap//bazel:defs.bzl`.
bzl_library(
    name = "aspects",
    srcs = ["aspects.bzl"],
)

bzl_library(
    name = "rules",
    srcs = ["rules.bzl"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        ":aspects",
        ":rules",
    ],
)
